﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.023003 2015-02-05T10:55:56Z 66ca3cb
 [Bugfix]
 - Ensure quoted YAML via Travis stack upgrades.

 [Dependencies::Stats]
 - Dependencies changed since 2.023002, see misc/*.deps* for details
 - develop: ↑1 (suggests: ↑1)
 - runtime: (recommends: +1)

2.023002 2015-01-14T07:26:23Z cdffce2
 [Dependencies::Stats]
 - Dependencies changed since 2.023001, see misc/*.deps* for details
 - configure: (recommends: ↓1)
 - develop: +1 ↓56 -1 (recommends: ↓1, suggests: +1)
 - runtime: +1 ↓59 -16 (recommends: +18)
 - test: ↓11 (recommends: +2 ↓3)

 [Features]
 - Use a less aggressive technique for recommending newer EUMM/TB to be slightly more stable and do 99% of what I mean
   without so much commit churn.
 - Selected packages auto-recommend selected versions as implied upgrade ( much more preceise and less automatic than
   all my random 'MatchInstalled' rubbish

 [Packaging]
 - Moved a boatload of hard required deps that were really mostly recommendations to where they belong.
 - Drop "ramp all the things" version insanity ( caveat: more things are going to break now due to not knowing all
   minimum deps )

2.023001 2015-01-13T12:12:42Z 9c13379
 [Bugfix]
 - Stop injecting TravisCI in newly minted dists ( superceded by bundle changes )

 [Dependencies::Stats]
 - Dependencies changed since 2.023000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: ↑2
 - runtime: ↑3
 - test: (recommends: ↑1)

2.023000 2015-01-13T08:13:40Z 8d47bcc
 [API]
 - Missing constructor arguments are now only warnings
 - Now does :PluginRemover and :Config::Slicer plugin bundle roles.
 - Inject TravisCI plugin standard.

 [Dependencies::Stats]
 - Dependencies changed since 2.022005, see misc/*.deps* for details
 - develop: ↑18 (recommends: ↑1)
 - runtime: +3 ↑21 -2
 - test: ↑2 (recommends: ↑1)

 [Internals]
 - No more MX::AttributeShortcuts
 - No more StrictConstructor

2.022005 2015-01-05T20:16:46Z cba7b74
 [Dependencies::Stats]