@@ -174,7 +174,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.023003
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.024000
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -227,6 +227,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
