@@ -1,6 +1,6 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-2.023004
+2.024000
 
 2.023003 2015-02-05T10:55:56Z
 
