@@ -1,6 +1,14 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Compatibility Breaking Changes]
+ - CommitBuild now builds to 'builds' regardless what branch you're on. This is mostly to negate hassle  involved with
+   working on multiple branches blocking activity due to 'dzil build' doing the wrong thing and creating new, disjoint
+   branches on its own.
+
+ [Dependencies::Stats]
+ - Dependencies changed since 2.023003, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
 
 2.023003 2015-02-05T10:55:56Z 66ca3cb
  [Bugfix]
